# sms-midterm-project

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/midterm_project/: Weather.h  WeatherRequest.h  WeatherResponse.h
devel/lib/midterm_project/: weather_client_node  weather_server_node
devel/lib/midterm_project_2/: publisher_node.py  subscriber_node.py
devel/lib/pkgconfig/: midterm_project.pc  midterm_project_2.pc
devel/lib/python3/dist-packages/midterm_project/srv/: _Weather.py
devel/share/common-lisp/ros/midterm_project/srv/: Weather.lisp  _package.lisp  _package_Weather.lisp  midterm_project-srv.asd
devel/share/gennodejs/ros/midterm_project/srv/: Weather.js
devel/share/midterm_project/cmake/: midterm_project-msg-extras.cmake  midterm_project-msg-paths.cmake  midterm_projectConfig.cmake
devel/share/midterm_project_2/cmake/: midterm_project_2Config.cmake
devel/share/roseus/ros/midterm_project/: manifest.l
devel/share/roseus/ros/midterm_project/srv/: Weather.l
src/midterm_project/: CMakeLists.txt  package.xml
src/midterm_project/launch/: weather.launch
src/midterm_project/src/: WeatherClient.cpp  WeatherServer.cpp
src/midterm_project/srv/: Weather.srv
src/midterm_project_2/: CMakeLists.txt
src/midterm_project_2/launch/: speed_control.launch
src/midterm_project_2/scripts/: publisher_node.py  subscriber_node.py
